@@ -1,3 +1,8 @@
+2004-04-04  Jon Schewe  <jpschewe@mtu.net>
+
+	* src/net/mtu/eggplant/util/DefaultBean.java (DefaultBean):
+	Removed deprecations.
+
 2004-01-28  Jon Schewe  <jpschewe@mtu.net>
 	
 	* Release 0.4
